# iam751_final_project

./: .gitignore  Makefile.am  README.md  configure.ac  fft_jp.c  fft_jp.h  fft_jp_2d_test.c  fft_jp_mpi_test.c  fft_jp_test.c  fft_jp_timing.c  fftw_2d_test.c  fftw_test.c  fftw_timing.c  mpi_alltoall_transpose_test.c
paper/: fft.bib  picard_jeffrey_final_project.tex
paper/figures/: 1d_timing.eps  2d_timing.eps  mpi_scaling.eps
